# clashbot

./: .gitignore  README.md  pyproject.toml  run.bat
clashbot/: listeners_clan.py  listeners_client.py  listeners_war.py  main.py
clashbot/cogs/: miscellaneous.py  moderation.py
skebenga/: bot_globals.py  coc_listeners.py  cog_moderator.py  globals.py  listeners.py  listeners_clan.py  listeners_client.py  listeners_war.py  main.py  utilities.py
skebenga/cogs/: clash_of_clans.py  help.py  miscellaneous.py  moderation.py
