[project]
name = "skebenga"
version = "0.1.0"
description = "An epic Discord bot for tracking Clash of Clans activity."
authors = [
    {name = "vrtx",email = "vortexshrimp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py (>=2.5.2,<3.0.0)",
    "coc-py (>=3.9.1,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
